--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -216,6 +216,20 @@
                 android:configChanges="keyboardHidden|orientation|screenSize"
                 android:windowSoftInputMode="stateHidden|adjustResize"
                 />
+        <!--支付宝-->
+        <activity
+                android:name="com.alipay.sdk.app.H5PayActivity"
+                android:configChanges="orientation|keyboardHidden|navigation"
+                android:exported="false"
+                android:screenOrientation="behind">
+        </activity>
+        <activity
+                android:name="com.alipay.sdk.auth.AuthActivity"
+                android:configChanges="orientation|keyboardHidden|navigation"
+                android:exported="false"
+                android:screenOrientation="behind">
+        </activity>
+
 
     </application>
 </manifest>
