--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,6 +84,13 @@
             android:protectionLevel="signature" />
 
     <uses-permission android:name="com.lbins.meetlove.permission.MIPUSH_RECEIVE" />
+    <!-- 适配Android N系统必需的ContentProvider写权限声明，写权限包含应用包名-->
+    <uses-permission android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.lbins.meetlove" />
+    <permission
+            android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.lbins.meetlove"
+            android:protectionLevel="normal">
+    </permission>
+
 
     <uses-feature
             android:name="android.hardware.location"
@@ -157,7 +164,7 @@
         </meta-data>
         <meta-data
                 android:name="UMENG_CHANNEL"
-                android:value="Umeng" >
+                android:value="WANDOUJIA" >
         </meta-data>
         <!-- ###################注册SDK使用的Activity###################### -->
         <!--分享编辑页-->
@@ -187,10 +194,6 @@
                 android:configChanges="orientation|keyboardHidden|screenSize"/>
 
         <!-- ###################添加UmengAppkey###################### -->
-        <meta-data
-                android:name="UMENG_APPKEY"
-                android:value="582de4c5aed1796448001b1d" >
-        </meta-data>
 
         <!-- QQ、QQ空间所需权限 -->
 
@@ -245,6 +248,70 @@
                 android:exported="false"
                 android:screenOrientation="behind">
         </activity>
+
+
+        <!-- push service start -->
+        <!-- 用于接收系统消息以保证PushService正常运行 -->
+        <receiver android:name="com.baidu.android.pushservice.PushServiceReceiver"
+                  android:process=":bdservice_v1" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="com.baidu.android.pushservice.action.notification.SHOW" />
+                <action android:name="com.baidu.android.pushservice.action.media.CLICK" />
+                <!-- 以下四项为可选的action声明，可大大提高service存活率和消息到达速度 -->
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
+        <!-- Push服务接收客户端发送的各种请求-->
+        <receiver android:name="com.baidu.android.pushservice.RegistrationReceiver"
+                  android:process=":bdservice_v1" >
+            <intent-filter>
+                <action android:name="com.baidu.android.pushservice.action.METHOD" />
+                <action android:name="com.baidu.android.pushservice.action.BIND_SYNC" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+        <service android:name="com.baidu.android.pushservice.PushService" android:exported="true"
+                 android:process=":bdservice_v1" >
+            <intent-filter >
+                <action android:name="com.baidu.android.pushservice.action.PUSH_SERVICE" />
+            </intent-filter>
+        </service>
+
+        <!-- 4.4版本新增的CommandService声明，提升小米和魅族手机上的实际推送到达率 -->
+        <service android:name="com.baidu.android.pushservice.CommandService"
+                 android:exported="true" />
+
+        <!-- 适配Android N系统必需的ContentProvider声明，写权限包含应用包名-->
+        <provider
+                android:name="com.baidu.android.pushservice.PushInfoProvider"
+                android:authorities="com.lbins.meetlove.bdpush"
+                android:writePermission="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.lbins.meetlove"
+                android:protectionLevel = "signature"
+                android:exported="true" />
+        <!-- 在百度开发者中心查询应用的API Key -->
+        <meta-data
+                android:name="api_key"
+                android:value="pO8Xhn7xPciq4I4qOtwr8GiG" />
+
+        <!-- push应用定义消息receiver声明 -->
+        <receiver android:name=".receiver.MyPushMessageReceiver" >
+            <intent-filter>
+                <!-- 接收push消息 -->
+                <action android:name="com.baidu.android.pushservice.action.MESSAGE" />
+                <!-- 接收bind,unbind,fetch,delete等反馈消息 -->
+                <action android:name="com.baidu.android.pushservice.action.RECEIVE" />
+                <action android:name="com.baidu.android.pushservice.action.notification.CLICK" />
+            </intent-filter>
+        </receiver>
+        <!-- push结束 -->
 
 
     </application>
